stopped at the html

--- a/index.html
+++ b/index.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>
-         <!-- first section  -->
-    <section>
-        <div></div>
-        <div></div>
-    </section>
+        <!-- first section  -->
+        <section>
+            <div>
+                <button>42*12</button>
+            </div>
+            <div>
+                <h1>504</h1>
+            </div>
+        </section>
 
-    <!-- section section  -->
+        <!-- section section  -->
 
-    <section>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
-    <!-- third section  -->
+        <section>
+            <div>
+                <button> <h1>C</h1></button><button><h1>DEL</h1></button><button><h1>%</h1></button><button><h1>/</h1></button>
+            </div>
+            <div>
+                <button><h1>7</h1></button><button><h1>8</h1></button><button><h1>9</h1></button><button><h1>*</h1></button>
+            </div>
+            
+            <div>
+                <button><h1>4</h1></button><button><h1>5</h1></button><button><h1>6</h1></button><button><h1>-</h1></button>
+            </div>
+            <div>
+                <button><h1>1</h1></button><button><h1>2</h1></button><button><h1>3</h1></button><button><h1>+</h1></button>
+            </div>
+        </section>
+        <!-- third section  -->
 
-    <section>
-        <div></div>
-    </section>
+        <section>
+            <div>
+                <button><h1>0</h1></button><button><h1>.</h1></button><button><h1>=</h1></button>
+            </div>
+        </section>
 
     </div>
-   
+
 </body>
+
 </html>
