--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/styles.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div>
+    <div id="bigbody">
         <!-- first section  -->
         <section>
             <div>
                 <button>42*12</button>
             </div>
-            <div>
+            <div class="smallbody">
                 <h1>504</h1>
             </div>
         </section>
@@ -23,24 +24,38 @@
 
         <section>
             <div>
-                <button> <h1>C</h1></button><button><h1>DEL</h1></button><button><h1>%</h1></button><button><h1>/</h1></button>
+                <button> <h1>C</h1></button>
+                <button><h1>DEL</h1></button>
+                <button><h1>%</h1></button>
+                <button><h1>/</h1></button>
             </div>
             <div>
-                <button><h1>7</h1></button><button><h1>8</h1></button><button><h1>9</h1></button><button><h1>*</h1></button>
+                <button><h1>7</h1></button>
+                <button><h1>8</h1></button>
+                <button><h1>9</h1></button>
+                <button><h1>*</h1></button>
             </div>
             
             <div>
-                <button><h1>4</h1></button><button><h1>5</h1></button><button><h1>6</h1></button><button><h1>-</h1></button>
+                <button><h1>4</h1></button>
+                <button><h1>5</h1></button>
+                <button><h1>6</h1></button>
+                <button><h1>-</h1></button>
             </div>
             <div>
-                <button><h1>1</h1></button><button><h1>2</h1></button><button><h1>3</h1></button><button><h1>+</h1></button>
+                <button><h1>1</h1></button>
+                <button><h1>2</h1></button>
+                <button><h1>3</h1></button>
+                <button><h1>+</h1></button>
             </div>
         </section>
         <!-- third section  -->
 
         <section>
             <div>
-                <button><h1>0</h1></button><button><h1>.</h1></button><button><h1>=</h1></button>
+                <button><h1>0</h1></button>
+                <button><h1>.</h1></button>
+                <button><h1>=</h1></button>
             </div>
         </section>
 
